<resources>
    <string name="app_name">슈슈노트</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="capture_button_alt">Capture</string>
    <string name="switch_camera_button_alt">Switch camera</string>
    <string name="gallery_button_alt">Gallery</string>
    <string name="back_button_alt">Back</string>
    <string name="share_button_alt">Share</string>
    <string name="share_hint">Share using</string>
    <string name="capture_mode_camera">Camera</string>
    <string name="capture_mode_hdr">HDR</string>
    <string name="capture_mode_night">Night</string>
    <string name="delete_button_alt">Delete</string>
    <string name="delete_dialog">Delete current photo?</string>
    <string name="delete_title">Confirm</string>

    <string name="creation_date">최초 작성일</string>
    <string name="creation_time">생성시간</string>
    <string name="edit_time">수정시간</string>
    <string name="alarm_time">알람시간</string>

    <string name="toolbar_title">새 노트</string>

    <string name="save">save</string>

    <string name="sort_by">정렬</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_add_folder_dialog_fragment">폴더 생성</string>
    <string name="hint_add_folder_dialog_fragment">폴더 이름을 입력해주세요.</string>

    <string name="folder_unlock_notification">폴더 잠금이 해제되었습니다.</string>
    <string name="folder_moved_notification">폴더로 이동하였습니다.</string>
    <string name="folder_name_request">폴더 이름을 입력해주세요.</string>
    <string name="password_confirmation">비밀번호를 확인해주세요.</string>
    <string name="password_mismatch">비밀번호가 일치하지 않습니다.</string>
    <string name="password_request">비밀번호를 입력해주세요.</string>
    <string name="password_set_notification">비밀번호가 설정되었습니다.</string>

    <string name="ok">확인</string>
    <string name="request_select_date">날짜를 선택해주세요.</string>

    <string name="save_complete_message">저장되었습니다.</string>
    <string name="request_password">비밀번호를 입력해주세요.</string>
    <string name="re_request_password">다시 한번 입력해주세요.</string>

    <!-- AppWidget -->
    <string name="no_attachment_message">삭제된 노트입니다.</string>
    <string name="request_title_message">제목을 입력해주세요.</string>
    <string name="cancel">취소</string>
    <string name="close_button">Close button</string>
    <string name="add_note">노트 추가</string>

    <!-- Licenses -->
    <string name="camera_view_license">https://github.com/natario1/CameraView/blob/master/LICENSE</string>
    <string name="flaticon_license">https://file000.flaticon.com/downloads/license/license.pdf</string>
    <string name="nanum_font_license">https://help.naver.com/support/contents/contents.help?serviceNo=1074&amp;categoryNo=3497</string>
    <string name="reko_font_license">http://recipekorea.com/bbs/board.php?bo_table=ld_0308&amp;wr_id=2479</string>
    <string name="bm_font_license">https://www.woowahan.com/#/fonts</string>

    <!-- Manual -->
    <string name="manual">
        \n\n
        1. 노트 생성\n
        화면 우측 하단의 + 버튼을 클릭하시거나 툴바 우측 상단의 옵션에서 노트추가 항목을 선택하시면 노트를 작성하는 화면으로 이동합니다.\n
        제목과 내용을 입력하실 수 있으며, 하단의 네비게이션 바의 카메라 모양을 선택하시면 사진을 촬영하여 추가할 수 있습니다.\n
        우측의 마이크 모양을 클릭하시면 음성인식을 이용하여 노트를 작성하실 수 있습니다.\n\n

        2. 디자인 변경\n
        메인 화면 좌측 상단의 햄버거 버튼을 클릭하시면 추가 메뉴를 확인하실 수 있습니다.\n
        그 중 환경설정 탭에 들어가셔서 색상 및 폰트를 변경하실 수 있습니다.\n\n

        3. 폴더 생성\n
        메인화면 좌측 상단의 햄버거 버튼을 클릭하시면 폴더 추가 항목을 확인하실 수 있습니다.\n
        폴더에 비밀번호를 설정하여 관리할 수 있습니다.\n\n

        4. 알림 설정\n
        작성된 노트에 대해 메인 화면에서 스와이프 동작으로 시계 모양 버튼을 클릭하시면 설정할 수 있습니다.\n\n

        5. 캘린더\n
        메인 화면 좌측 상단의 햄버거 버튼을 클릭하시면 캘린더를 확인하실 수 있으며, 원하는 날짜에 노트를 추가하실 수 있습니다.\n
        캘린더에서 등록한 노트는 자동 알림 설정됩니다.\n
        또한 본 앱이 생성한 캘린더 이외에 기기에서 제공하는 캘린더에 내용을 등록할 수 있습니다.\n\n

        6. 앱 위젯\n
        본 어플리케이션은 앱 위젯 기능을 제공합니다.\n
        다른 앱의 위젯 등록 방식과 같으며, 환경설정에서 디자인을 선택할 수 있습니다.\n\n

    </string>

    <!-- Ad -->
    <string name="admob_app_id">ca-app-pub-2255205326479079~2879048939</string>
    <string name="banner_ad_unit_id">ca-app-pub-2255205326479079/5122068897</string>
    <string name="banner_ad_unit_id_for_test">ca-app-pub-3940256099942544/6300978111</string>

</resources>
