<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlueGrey"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"
        android:text="버전"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_large"
        android:gravity="center_vertical"/>

    <TextView
        android:id="@+id/text_view_version"
        style="@style/ConfigureFragmentItemStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="1.0.0" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:text="오픈소스 라이센스"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_large"
        android:gravity="center_vertical"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"/>

    <TextView
        style="@style/ConfigureFragmentSubtitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CameraView" />

    <TextView
        style="@style/ConfigureFragmentItemStyle"
        android:autoLink="web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/camera_view_license"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:text="아이콘 라이센스"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_large"
        android:gravity="center_vertical"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"/>

    <TextView
        android:autoLink="web"
        style="@style/ConfigureFragmentItemStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flaticon_license"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:textStyle="bold"
        android:text="폰트 라이센스"
        android:textSize="@dimen/text_size_large"
        android:gravity="center_vertical"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"/>

    <TextView
        style="@style/ConfigureFragmentSubtitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="나눔폰트"/>

    <TextView
        android:autoLink="web"
        style="@style/ConfigureFragmentItemStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nanum_font_license"/>

    <TextView
        style="@style/ConfigureFragmentSubtitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="배민체"/>

    <TextView
        android:autoLink="web"
        style="@style/ConfigureFragmentItemStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bm_font_license"/>

    <TextView
        style="@style/ConfigureFragmentSubtitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="레코체"/>

    <TextView
        android:autoLink="web"
        style="@style/ConfigureFragmentItemStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reko_font_license"
        android:paddingBottom="8dp"/>

</LinearLayout>